// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account Invitation should be able to send invitation for existing user 1`] = `
Array [
  Array [
    Object {
      "clientGateway": [MockFunction],
      "logger": [Function],
      "pgClient": Object {
        "query": [MockFunction] {
          "calls": Array [
            Array [
              "SAVEPOINT graphql_mutation",
            ],
            Array [
              "INSERT INTO invitation (sender_account_id, company_id, status, invitee, personal_note) VALUES ($1,$2,$3,$4,$5) RETURNING *",
              Array [
                null,
                1,
                "NEW",
                "email",
                "personalNote",
              ],
            ],
            Array [
              "RELEASE SAVEPOINT graphql_mutation",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Object {
                "rows": Array [],
              },
            },
            Object {
              "type": "return",
              "value": Object {
                "rows": Array [
                  Object {
                    "first_name": "First name value",
                    "id": 2,
                  },
                ],
              },
            },
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
      "pgRootPool": Object {
        "query": [MockFunction] {
          "calls": Array [
            Array [
              "SELECT * FROM account WHERE email = $1",
              Array [
                "email",
              ],
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
      },
      "protocol": "https",
      "pubSub": [MockFunction],
      "storageClient": Object {
        "deleteFile": [MockFunction],
        "uploadFileByStream": [MockFunction],
      },
      "user": Object {
        "AUTH0_NAMESPACE/terms_to_accept": [MockFunction],
        "can": [Function],
        "company": Object {
          "id": 1,
        },
        "id": null,
        "market": Object {
          "domain": "en",
          "sendMailbox": undefined,
        },
        "role": "INSTALLER",
        "sub": "user-sub",
      },
    },
    "NEWUSER_INVITED",
    Object {
      "company": undefined,
      "email": "email",
      "firstname": "email",
      "registerlink": "my-ticketen",
    },
  ],
]
`;

exports[`Account Invitation should be able to send invitation for new user 1`] = `
Array [
  Array [
    Object {
      "clientGateway": [MockFunction],
      "logger": [Function],
      "pgClient": Object {
        "query": [MockFunction] {
          "calls": Array [
            Array [
              "SAVEPOINT graphql_mutation",
            ],
            Array [
              "INSERT INTO invitation (sender_account_id, company_id, status, invitee, personal_note) VALUES ($1,$2,$3,$4,$5) RETURNING *",
              Array [
                null,
                1,
                "NEW",
                "email",
                "personalNote",
              ],
            ],
            Array [
              "RELEASE SAVEPOINT graphql_mutation",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Object {
                "rows": Array [],
              },
            },
            Object {
              "type": "return",
              "value": Object {
                "rows": Array [
                  Object {
                    "first_name": "First name value",
                    "id": 2,
                  },
                ],
              },
            },
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
      "pgRootPool": Object {
        "query": [MockFunction] {
          "calls": Array [
            Array [
              "SELECT * FROM account WHERE email = $1",
              Array [
                "email",
              ],
            ],
            Array [
              "SELECT * FROM company_member WHERE account_id = $1",
              Array [
                1,
              ],
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
      },
      "protocol": "https",
      "pubSub": [MockFunction],
      "storageClient": Object {
        "deleteFile": [MockFunction],
        "uploadFileByStream": [MockFunction],
      },
      "user": Object {
        "AUTH0_NAMESPACE/terms_to_accept": [MockFunction],
        "can": [Function],
        "company": Object {
          "id": 1,
        },
        "id": null,
        "market": Object {
          "domain": "en",
          "sendMailbox": undefined,
        },
        "role": "INSTALLER",
        "sub": "user-sub",
      },
    },
    "MEMBER_INVITED",
    Object {
      "accountId": 1,
      "company": undefined,
      "email": "email",
      "firstname": undefined,
      "registerlink": "https://dev-en.intouch.dddev.io/api/invitation?company_id=1",
      "sender": "undefined undefined",
    },
  ],
]
`;

exports[`Account Invitation should complete an invitation 1`] = `
Array [
  Array [
    "SAVEPOINT graphql_mutation",
  ],
  Array [
    "INSERT INTO account (market_id, email, first_name, last_name, role, status) VALUES ($1, $2, $3, $4, $5, $6) RETURNING *",
    Array [
      1,
      undefined,
      "Name",
      "Name",
      "INSTALLER",
      "ACTIVE",
    ],
  ],
  Array [
    "SELECT set_config('app.current_account_id', $1, true);",
    Array [
      1,
    ],
  ],
  Array [
    "SELECT * FROM market WHERE id = $1",
    Array [
      1,
    ],
  ],
  Array [
    "select * from link_account_to_company ($1, $2)",
    Array [
      1,
      1,
    ],
  ],
  Array [
    "SELECT * FROM market WHERE id = $1",
    Array [
      1,
    ],
  ],
  Array [
    "RELEASE SAVEPOINT graphql_mutation",
  ],
]
`;

exports[`Account Invitation should complete an invitation with additional checks 1`] = `
Array [
  Array [
    "SAVEPOINT graphql_mutation",
  ],
  Array [
    "INSERT INTO account (market_id, email, first_name, last_name, role, status) VALUES ($1, $2, $3, $4, $5, $6) RETURNING *",
    Array [
      1,
      undefined,
      undefined,
      undefined,
      "INSTALLER",
      "ACTIVE",
    ],
  ],
  Array [
    "SELECT set_config('app.current_account_id', $1, true);",
    Array [
      1,
    ],
  ],
  Array [
    "SELECT * FROM market WHERE id = $1",
    Array [
      1,
    ],
  ],
  Array [
    "select * from link_account_to_company ($1, $2)",
    Array [
      1,
      1,
    ],
  ],
  Array [
    "SELECT * FROM market WHERE id = $1",
    Array [
      1,
    ],
  ],
  Array [
    "RELEASE SAVEPOINT graphql_mutation",
  ],
]
`;

exports[`Account Invitation should invite a user sending a change password email if not exists 1`] = `
Array [
  Array [
    "SAVEPOINT graphql_mutation",
  ],
  Array [
    "INSERT INTO invitation (sender_account_id, company_id, status, invitee, personal_note) VALUES ($1,$2,$3,$4,$5) RETURNING *",
    Array [
      null,
      1,
      "NEW",
      "email",
      "personalNote",
    ],
  ],
  Array [
    "ROLLBACK TO SAVEPOINT graphql_mutation",
  ],
  Array [
    "RELEASE SAVEPOINT graphql_mutation",
  ],
]
`;

exports[`Account Invitation should invite a user sending a change password email if not exists 2`] = `Array []`;

exports[`Account Invitation should invite a user sending complete invitation email if exists 1`] = `
Array [
  Array [
    "SAVEPOINT graphql_mutation",
  ],
  Array [
    "INSERT INTO invitation (sender_account_id, company_id, status, invitee, personal_note) VALUES ($1,$2,$3,$4,$5) RETURNING *",
    Array [
      null,
      1,
      "NEW",
      "email",
      "personalNote",
    ],
  ],
  Array [
    "ROLLBACK TO SAVEPOINT graphql_mutation",
  ],
  Array [
    "RELEASE SAVEPOINT graphql_mutation",
  ],
]
`;

exports[`Account Invitation should invite a user sending complete invitation email if exists 2`] = `Array []`;

exports[`Account Registration Should be able to register as company_admin 1`] = `
Array [
  Array [
    "SAVEPOINT graphql_mutation",
  ],
  Array [
    "SELECT set_config('app.current_account_id', $1, true);",
    Array [
      1,
    ],
  ],
  Array [
    "SELECT * FROM company",
    Array [],
  ],
  Array [
    "SELECT * FROM create_company($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14)",
    Array [
      null,
      null,
      null,
      null,
      null,
      "NEW",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  ],
  Array [
    "SELECT * FROM market WHERE id = $1",
    Array [
      1,
    ],
  ],
  Array [
    "RELEASE SAVEPOINT graphql_mutation",
  ],
]
`;

exports[`Account Registration Should be able to register as installer 1`] = `
Array [
  Array [
    "SAVEPOINT graphql_mutation",
  ],
  Array [
    "SELECT set_config('app.current_account_id', $1, true);",
    Array [
      1,
    ],
  ],
  Array [
    "SELECT * FROM company",
    Array [],
  ],
  Array [
    "SELECT * FROM market WHERE id = $1",
    Array [
      undefined,
    ],
  ],
  Array [
    "RELEASE SAVEPOINT graphql_mutation",
  ],
]
`;

exports[`Account Update Role extended act in case upload photo process failure 1`] = `
Array [
  Array [
    "SAVEPOINT graphql_mutation",
  ],
  Array [
    "select account.photo from account where id = $1",
    Array [
      null,
    ],
  ],
  Array [
    "ROLLBACK TO SAVEPOINT graphql_mutation",
  ],
  Array [
    "RELEASE SAVEPOINT graphql_mutation",
  ],
]
`;
